# WCasm

./: .gitignore  CMakeLists.txt  main.c
cmd/wcasm-objdump/: dump.c  print.c
cmd/wcasm-objdump/include/: dump.h  print.h
include/: debug.h
include/tool/: type.h
include/tool/error/: error_handle.h
include/tool/leb128/: leb128.h
include/tool/stack/: stack.h
include/tool/vector/: vector.h
include/wasm/: module.h  op_code.h
include/wasm/instruction/: instruction.h
include/wasm/vm/: vm.h
include/wasm/wasm_reader/: segment.h  wasm_reader.h
tool/: debug.h
tool/leb128/: leb128.c
tool/stack/: control_stack.c  stack.c  stack_test.c
tool/vector/: vector.c
wasm/: module.c  op_code.c
wasm/instruction/: instruction.c
wasm/instruction/control_inst/block_inst/: block_inst.c
wasm/instruction/control_inst/call_inst/: call_inst.c
wasm/instruction/mem_inst/: mem_inst.c
wasm/instruction/param_inst/: param_inst.c
wasm/instruction/value_inst/: compare_value_inst.c  const_value_inst.c  one_valus_inst.c  test_value_inst.c  two_value_inst.c  typeConvert_value.c
wasm/vm/: function.c  global_var.c  memory.c  native_function.c  table.c  vm.c
wasm/wasm_reader/: segment.c  wasm_reader.c
